--- a/tuggpg/templates/base.html
+++ b/tuggpg/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 
     <title>{% block title %} {% endblock %}</title>
@@ -18,6 +18,28 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+                {% if not current_keyring %}
+                    <li class="nav-item">
+                        <a class="nav-link text-nowrap" href="{{ url_for('main') }}">Take me to the keysigning parties</a>
+                    </li>
+                {% endif %}
+            </ul>
+            <ul class="navbar-nav mx-auto w-100 justify-content-center align-items-center" style="width: 100%;">
+                {% if current_keyring %}
+                    <span class="navbar-text mx-3">Available keyrings</span>
+                {% endif %}
+                {% for kr in keyrings %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if kr == current_keyring %}active{% endif %}" href="{{ url_for('keyring', keyring=kr) }}">{{ kr }}</a>
+                    </li>
+                {% endfor %}
+                {% if current_keyring %}
+                    <li class="nav-item ml-3">
+                        <a class="nav-link" href="{{ url_for('fetch_keys') }}">Download keyring</a>
+                    </li>
+                {% endif %}
+            </ul>
             <ul class="navbar-nav ml-auto">
 		{% block remote_user %} {{remote_user}} {% endblock %}
             </ul>
