--- a/tuggpg/templates/index.html
+++ b/tuggpg/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <h1> {% block title %} Welcome to TUGPGP {% endblock %} </h1>
+  <h1> {% block title %} Welcome to TUGGPG {% endblock %} </h1>
   <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
   <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename= 'images/favicon.ico') }}">
 
